Fix issues with custom stat button on Safari
Fixes #5941
Fixes #5937

--- a/src/app/dim-ui/CustomStatTotal.m.scss
+++ b/src/app/dim-ui/CustomStatTotal.m.scss
@@ -1,5 +1,6 @@
 .inlineStatIcon {
   cursor: pointer;
+  display: inline-block;
   img {
     display: inline-block;
     vertical-align: bottom;
